# node-abieos

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
deno_dist/: abieos.d.ts  abieos.js  abieos.ts  mod.ts
lib/: abieos-darwin-arm64.node  abieos-linux-x64.node  abieos-win32-x64.node  abieos.deno.ts  abieos.ts  mod.ts
scripts/: copy-module.mjs
src/: main.cpp  win_delay_load_hook.cc
test/: deserialization.test.js  loader.test.js
